--- a/src/assets/styles/components/search/filters/searchFilter.scss
+++ b/src/assets/styles/components/search/filters/searchFilter.scss
@@ -1,6 +1,13 @@
 @import '../../../constants.scss';
 
 .search-filter {
+  border-bottom: 1px solid #eee;
+  padding: 14px 16px 16px;
+
+  &:last-child {
+    border-bottom: none;
+  }
+
   &__title {
     margin-bottom: 10px;
     font-size: 1em;
@@ -30,6 +37,61 @@
       justify-content: flex-start;
       align-content: flex-start;
       flex-wrap: wrap;
+    }
+  }
+
+  &__check {
+    .form-check-input:checked {
+      background-color: $lightBlue;
+      border-color: $lightBlue;  
+    }
+
+    .form-check-input:focus {
+      border: 1px solid #86b7fe !important;
+      outline: 0 !important;
+    }
+  }
+
+  &__country {
+    width: 100%;
+    border-radius: 8px;
+
+    &:focus {
+      border: 1px solid;
+    }
+  }
+
+  &__date {
+    margin-top: 5px;
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+
+    &-title {
+      font-size: 14px;
+      line-height: 12px;
+      margin-right: 5px;
+      color: #a4a4a4;
+    }
+
+    &-picker {
+      width: 70%;
+      
+      .MuiInputBase-input {
+        padding: 10px;
+        font-size: 12px;
+      }
+    }
+  }
+
+  &_release-date {
+
+    &__country {
+      margin-top: 10px;
+    }
+
+    &__types {
+      margin-top: 15px;
     }
   }
 }
